src/test/deca/syntax/invalid/intermediaire2/arithmetiques/01plusIncomplete.deca
// Description:
//    tests de programme incorrect lexicalement (operation sans operande de gauche)
//
// Resultats:
//    
//
// Historique:
//    cree le 08/06/2022

{
    int x;
    x = + 5;
}
